test/typecheck/bad-callindirect-type-mismatch.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (type $t (func (param i32) (result i32)))
  (func $f (type $t) (i32.const 0))
  (table funcref (elem $f))
  (func
    f32.const 0
    i32.const 0
    call_indirect (type $t)
    drop))
(;; STDERR ;;;
out/test/typecheck/bad-callindirect-type-mismatch.txt:10:5: error: type mismatch in call_indirect, expected [i32] but got [f32]
    call_indirect (type $t)
    ^^^^^^^^^^^^^
;;; STDERR ;;)
